update documentation - r cmd check

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Imports: Biostrings,
          ineq,
          iNEXT,
          msa,
+         ggmsa,
          purrr,
          tictoc,
          phangorn,
