--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(topSeqsPlot)
 export(uniqueSeqs)
 import(Biostrings)
 import(dtplyr)
+import(ggmsa)
 import(ggplot2)
 import(httr)
 import(iNEXT)
