--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,6 @@ Imports: Biostrings,
          msa,
          ggmsa,
          purrr,
-         tictoc,
          phangorn,
          RColorBrewer,
          stats,
@@ -59,6 +58,7 @@ biocViews: Software,
            Alignment, 
            MultipleSequenceAlignment, 
            msa, 
+           ggmsa,
            vegan,
            phyloseq
 NeedsCompilation: no
