attempt fix ggtree dependency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Depends: R (>= 4.1.0), data.table
 Imports: Biostrings,
          circlize,
          ggalluvial,
+         ggtree (>= 3.7.1),
          grid,
          ineq,
          iNEXT,
@@ -49,8 +50,7 @@ Suggests: phyloseq,
           knitr,
           rmarkdown,
           testthat,
-          wordcloud,
-          ggtree
+          wordcloud
 biocViews: Software, 
            Technology, 
            Sequencing, 
@@ -61,6 +61,8 @@ biocViews: Software,
            ggmsa,
            vegan,
            phyloseq
+Remotes:
+    YuLab-SMU/ggtree
 NeedsCompilation: no
 URL: https://github.com/elulu3/LymphoSeq2,
     https://elulu3.github.io/LymphoSeq2
